apps/dssp-targetp-37/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-37
  namespace: dev
  labels:
    app: dssp-targetp-37
    backstage.io/kubernetes-id: dssp-targetp-37
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-37
  template:
    metadata:
      labels:
        app: dssp-targetp-37
        backstage.io/kubernetes-id: dssp-targetp-37
        environment: dev
    spec:
      containers:
        - name: dssp-targetp-37
          image: chaitanyapandeygspann/dssp-targetp-37:1.0.16
          ports:
            - containerPort: 5000
