apps/dssp-targetp-37/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetp-37
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetp-37
    environment: dev
spec:
  selector:
    app: dssp-targetp-37
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
